Use localhost:3000 for assets
I will replace this in my deployment script to point at the real
asset host.

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta name="csrf-param" content="authenticity_token" />
     <meta name="csrf-token" content="<%= authenticityToken %>" />
-    <link rel="stylesheet" href="http://better-tweet-feed-assets.herokuapp.com/assets/application.css" />
-    <script src="http://better-tweet-feed-assets.herokuapp.com/assets/application.js"></script>
+    <link rel="stylesheet" href="http://localhost:3000/assets/application.css" />
+    <script src="http://localhost:3000/assets/application.js"></script>
     <% if (app.settings.env === 'production') { %>
       <script type="text/javascript">
 
