Put links to GitHub and /me

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -38,6 +38,7 @@
           </p>
           <p>&nbsp;<!-- I can't believe how lazy I am. --></p>
           <p>Oh and by the way, Twitter's OAuth is being skittish. If it times out on you, hit reload.</p>
+          <p class="pull-right">—<a href="https://twitter.com/jo_liss">@jo_liss</a> (<a href="http://www.solitr.com/blog/">blog</a>)</p>
         </div>
       </div>
     </div>
