--- a/app/index.ejs
+++ b/app/index.ejs
@@ -20,6 +20,7 @@
 
       </script>
     <% } %>
+    <title>Better Tweet Feed</title>
   </head>
   <body>
     <div id="application-info" style="display: none;">
