Host screenshot locally

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -26,7 +26,7 @@
     <div id="application-info" style="display: none;">
       <div class="container">
         <div class="hero-unit">
-	  <a href="http://i.imgur.com/RmORA.png" class="thumbnail pull-right" style="margin: 0 0 0 20px;"><img src="http://i.imgur.com/RmORA.png" style="width: 250px;" alt=""></a>
+	  <a href="http://localhost:3000/assets/screenshot.png" class="thumbnail pull-right" style="margin: 0 0 0 20px;"><img src="http://localhost:3000/assets/screenshot.png" style="width: 250px;" alt=""></a>
           <h1>Better Tweet Feed</h1>
           <p>I really just wanted to build a tool to view people's profiles
 	  with replies filtered out. But then I ended up implementing timelines
